<resources>
    <string name="app_name">defApp</string>
    <string name="creators">Creators :</string>
    <string name="datecreation">Creation date :</string>
    <string name="editedby">Entreprise :</string>
    <string name="website">Official site :</string>
    <string name="rank">Ranking :</string>
    <string name="signin">CONNECT</string>
    <string name="from">from</string>
    <string name="mpdam">MPDAM</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="logout">DISCONNECT</string>
</resources>