<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.DetailsActivity">

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/img_details_app"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"

        />
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/img_details_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_appname"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textColor="@color/gray"
            android:text="appname"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="2dp"
            android:textSize="25sp"
            android:textColor="@color/blue"
            android:text="@string/creators"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_creators"
            android:textSize="15sp"
            android:layout_marginLeft="2dp"
            android:textColor="@color/black"
            android:text="creatorsds"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="2dp"
            android:textSize="25sp"
            android:textColor="@color/blue"
            android:text="@string/datecreation"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:id="@+id/tv_createdate"
            android:layout_marginLeft="2dp"
            android:textSize="15sp"
            android:text="createdate"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="2dp"
            android:textSize="25sp"
            android:textColor="@color/blue"
            android:text="@string/editedby"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_entreprise"
            android:layout_marginLeft="2dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="entreprise"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="2dp"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:text="@string/website"/>
        <TextView
            android:id="@+id/tv_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="siteweb"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="2dp"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:text="@string/rank"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ranking"
            android:layout_marginLeft="2dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="classement"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>