<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/login_apps"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/img_login"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_user"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="@id/img_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_login"
        android:id="@+id/img_logo"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:paddingHorizontal="10dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/img_logo">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawablePadding="12dp"
            android:paddingStart="15dp"
            android:drawableStart="@drawable/custom_email_icon"
            android:background="@drawable/custom_input"

            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_input"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:drawableStart="@drawable/custom_lock_login_icon"
            android:drawablePadding="12dp"
            android:paddingStart="15dp"
            android:inputType="textPassword" />
    </LinearLayout>



    <Button
        android:id="@+id/btn_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/signin"
        android:textSize="20sp"
        android:backgroundTint="@color/lightBlueColor"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>